Removed all bugs found with FindBugs